--- a/templateSources/WpfApplication/Company.Desktop.Shared/Resources/Translations.resx
+++ b/templateSources/WpfApplication/Company.Desktop.Shared/Resources/Translations.resx
@@ -120,4 +120,16 @@
   <data name="shared_Question" xml:space="preserve">
     <value>Question</value>
   </data>
+  <data name="shared_Yes" xml:space="preserve">
+    <value>Yes</value>
+  </data>
+  <data name="shared_No" xml:space="preserve">
+    <value>No</value>
+  </data>
+  <data name="shared_Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="shared_OK" xml:space="preserve">
+    <value>OK</value>
+  </data>
 </root>
