--- a/src/Tooling/Shared/Resources/Translations.de.resx
+++ b/src/Tooling/Shared/Resources/Translations.de.resx
@@ -117,10 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btn_MoveProject" xml:space="preserve">
+    <value>Projekte verschieben</value>
+  </data>
+  <data name="caption_Warning" xml:space="preserve">
+    <value>Warnung</value>
+  </data>
   <data name="CommandLabelOpenProjectMover" xml:space="preserve">
     <value>Projektordnerstruktur ändern</value>
   </data>
+  <data name="err_MoverSyncWarning" xml:space="preserve">
+    <value>Die Projektmappe muss</value>
+  </data>
+  <data name="err_MoverSyncWarningLinkText" xml:space="preserve">
+    <value>gespeichert werden.</value>
+  </data>
   <data name="MenuGroupLabel" xml:space="preserve">
     <value>Amusoft</value>
+  </data>
+  <data name="MoveActionSelectedProject_0" xml:space="preserve">
+    <value>{0} Projekte ausgewählt.</value>
+  </data>
+  <data name="ProjectMoverToolWindowTitle" xml:space="preserve">
+    <value>Projektmappen-Ordnerstrukturverwaltung</value>
+  </data>
+  <data name="SelectProjectsForMoveAction" xml:space="preserve">
+    <value>Es müssen Projekte zum verschieben ausgewählt werden.</value>
+  </data>
+  <data name="SelectTargetDirectory" xml:space="preserve">
+    <value>Zielverzeichnis auswählen</value>
   </data>
 </root>
