--- a/src/Tooling/Shared/Resources/Translations.resx
+++ b/src/Tooling/Shared/Resources/Translations.resx
@@ -120,6 +120,9 @@
   <data name="btn_MoveProject" xml:space="preserve">
     <value>Move projects</value>
   </data>
+  <data name="caption_Question" xml:space="preserve">
+    <value>Question</value>
+  </data>
   <data name="caption_Warning" xml:space="preserve">
     <value>Warning</value>
   </data>
@@ -140,6 +143,9 @@
   </data>
   <data name="ProjectMoverToolWindowTitle" xml:space="preserve">
     <value>Project folder hierarchy tool</value>
+  </data>
+  <data name="question_ClearTargetFolderOfEmptyFolders" xml:space="preserve">
+    <value>Do you want to remove empty folders in the target location?</value>
   </data>
   <data name="SelectProjectsForMoveAction" xml:space="preserve">
     <value>Select the projects you want to move</value>
