--- a/src/Tooling/Shared/Resources/Translations.resx
+++ b/src/Tooling/Shared/Resources/Translations.resx
@@ -126,8 +126,14 @@
   <data name="caption_Warning" xml:space="preserve">
     <value>Warning</value>
   </data>
+  <data name="cmd_RenameProjectWithFolders" xml:space="preserve">
+    <value>Rename including folder name</value>
+  </data>
   <data name="CommandLabelOpenProjectMover" xml:space="preserve">
     <value>Open project mover utility</value>
+  </data>
+  <data name="common_Update" xml:space="preserve">
+    <value>Update</value>
   </data>
   <data name="err_MoverSyncWarning" xml:space="preserve">
     <value>The solution must be </value>
@@ -135,11 +141,26 @@
   <data name="err_MoverSyncWarningLinkText" xml:space="preserve">
     <value>saved.</value>
   </data>
+  <data name="lbl_CurrentName" xml:space="preserve">
+    <value>Current name:</value>
+  </data>
+  <data name="lbl_CurrentProjectPath" xml:space="preserve">
+    <value>Current project path:</value>
+  </data>
+  <data name="lbl_NewName" xml:space="preserve">
+    <value>New name:</value>
+  </data>
+  <data name="lbl_NewProjectPath" xml:space="preserve">
+    <value>New project path:</value>
+  </data>
   <data name="MenuGroupLabel" xml:space="preserve">
     <value>Amusoft</value>
   </data>
   <data name="MoveActionSelectedProject_0" xml:space="preserve">
     <value>{0} projects selected for movement.</value>
+  </data>
+  <data name="msg_PleaseChooseAValidName" xml:space="preserve">
+    <value>Please choose a valid name.</value>
   </data>
   <data name="ProjectMoverToolWindowTitle" xml:space="preserve">
     <value>Project folder hierarchy tool</value>
@@ -152,5 +173,8 @@
   </data>
   <data name="SelectTargetDirectory" xml:space="preserve">
     <value>Select the target directory</value>
+  </data>
+  <data name="title_RenameProject" xml:space="preserve">
+    <value>Rename project</value>
   </data>
 </root>
